--- a/Game/Makefile
+++ b/Game/Makefile
@@ -16,7 +16,7 @@ all: Game.out
 
 
 # Compile: create object files from C source files.
-Game.o: Game.c ../../../drivers/avr/ir_uart.h ../../../drivers/avr/system.h ../../../drivers/display.h ../../../drivers/navswitch.h ../../../fonts/font5x7_1.h ../../../utils/font.h ../../../utils/pacer.h ../../../utils/tinygl.h ../../../drivers/avr/pio.h
+Game.o: Game.c ../../../drivers/avr/system.h ../../../drivers/display.h ../../../drivers/navswitch.h ../../../utils/pacer.h ../../../utils/tinygl.h 
 	$(CC) -c $(CFLAGS) $< -o $@
 
 ir_uart.o: ../../../drivers/avr/ir_uart.c ../../../drivers/avr/ir_uart.h ../../../drivers/avr/pio.h ../../../drivers/avr/system.h ../../../drivers/avr/timer0.h ../../../drivers/avr/usart1.h
@@ -64,7 +64,7 @@ Tables.o: Tables.c Tables.h ../../../utils/tinygl.h
 Animations.o: Animations.c Animations.h  ../../../drivers/avr/pio.h ../../../drivers/avr/system.h ../../../utils/tinygl.h
 	$(CC) -c $(CFLAGS) $< -o $@ 
 
-LetterPicker.o: LetterPicker.c LetterPicker.h  ../../../drivers/avr/system.h ../../../drivers/display.h ../../../drivers/navswitch.h ../../../fonts/font5x7_1.h ../../../utils/font.h ../../../utils/pacer.h ../../../utils/tinygl.h ../../../drivers/avr/pio.h
+LetterPicker.o: LetterPicker.c LetterPicker.h  ../../../drivers/avr/system.h ../../../drivers/display.h ../../../drivers/navswitch.h ../../../utils/pacer.h ../../../utils/tinygl.h ../../../drivers/avr/pio.h
 	$(CC) -c $(CFLAGS) $< -o $@
 
 Starter.o: Starter.c Starter.h  ../../../drivers/avr/system.h ../../../drivers/display.h ../../../drivers/navswitch.h ../../../fonts/font5x7_1.h ../../../utils/font.h ../../../utils/pacer.h ../../../utils/tinygl.h ../../../drivers/avr/pio.h
